Fix a bug causing the columns on the profile page to squish on smaller monitors

--- a/src/scss/modules/_profile_enhancer.scss
+++ b/src/scss/modules/_profile_enhancer.scss
@@ -74,3 +74,8 @@ div#c-users div#a-show {
     }
 
 }
+
+div#c-users div#a-show .user-statistics th {
+    min-width: fit-content;
+    white-space: nowrap;
+}
